# sprint-scribe

./: .gitignore  LICENSE  MIDDLE-TERM-CHALLENGE.md  README.md  SOW-EXAMPLE.md  package-lock.json  package.json  pyproject.toml
api/: index.py  run_agent.py
api/utils/: agent.py
app/(chat)/: page.tsx
app/og/: route.tsx
components/: sprint-scribe.tsx
notebook/: agent.ipynb  exploration.ipynb
