[project]
name = "sprint-scribe"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "==3.11.9"
dependencies = [
    "jupyter>=1.1.1",
    "langchain-experimental>=0.3.4",
    "langchain>=0.3.19",
    "langchain-cohere==0.4.4",
    "cohere>=5.12.0,<5.13.0", 
    "langchain-openai>=0.3.28",
    "qdrant-client>=1.13.2",
    "rank-bm25>=0.2.2",
    "langchain-qdrant>=0.2.0",
    "ragas==0.2.10",
    "rapidfuzz==3.13.0",
    "langgraph>=0.5.1",
    "tavily-python>=0.7.9",
    "annotated-types==0.7.0",
    "anyio==4.4.0",
    "certifi==2024.7.4",
    "charset-normalizer==3.4.0",
    "click==8.1.7",
    "distro==1.9.0",
    "dnspython==2.6.1",
    "email_validator==2.2.0",
    "fastapi==0.111.1",
    "fastapi-cli==0.0.4",
    "h11==0.14.0",
    "httpcore==1.0.5",
    "httptools==0.6.1",
    "httpx==0.27.0",
    "idna==3.7",
    "Jinja2==3.1.4",
    "markdown-it-py==3.0.0",
    "MarkupSafe==2.1.5",
    "mdurl==0.1.2",
    "openai==1.98.0",
    "pydantic==2.8.2",
    "pydantic_core==2.20.1",
    "Pygments==2.18.0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.9",
    "PyYAML==6.0.1",
    "requests==2.32.3",
    "rich==13.7.1",
    "shellingham==1.5.4",
    "sniffio==1.3.1",
    "starlette==0.37.2",
    "tqdm==4.66.4",
    "typer==0.12.3",
    "typing_extensions==4.12.2",
    "urllib3==2.2.3",
    "uvicorn==0.30.3",
    "uvloop==0.19.0",
    "watchfiles==0.22.0",
    "websockets==12.0",
]
